[package]
authors = ["Mikkel Kroman <mk@uplink.io>"]
edition = "2018"
name = "meta-title_fetcher"
version = "0.1.0"

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
url = "2.1.0"
reqwest = { version = "0.10.8", features = ["native-tls-vendored", "blocking", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.8"
scraper = "0.12"
lazy_static = "1.4"
toml = "0.5.5"
clap = "2.33"
quote = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
