[package]
authors = ["Mikkel Kroman <mk@uplink.io>"]
edition = "2018"
name = "meta-title_fetcher"
version = "0.1.0"

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
url = "2.1"
reqwest = { version = "0.9.24", features = ["default-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
scraper = "0.12"
lazy_static = "1.4"
toml = "0.5.5"
clap = "2.33"

[profile.release]
lto = true
